# crypto

./: .gitignore  CMakeLists.txt  LLM.md  README.md
docs/: .gitignore  package-lock.json  tsconfig.json
docs-site/: next.config.mjs  package.json
docs-site/.source/: index.js
docs-site/app/docs/[[...slug]]/: page.tsx
docs-site/content/docs/: meta.json
docs-site/content/docs/api/: bls.mdx  kzg.mdx
docs-site/content/docs/backends/: cpu.mdx  cuda.mdx
docs-site/content/docs/concepts/: hashing.mdx  index.mdx  kzg.mdx  mldsa.mdx
docs/.github/workflows/: docs.yml
docs/.source/: index.js
docs/app/: layout.config.tsx
docs/content/docs/: index.mdx
docs/content/docs/api/: hash.mdx  index.mdx  meta.json  mldsa.mdx
docs/content/docs/backends/: index.mdx  metal.mdx
docs/content/docs/concepts/: bls.mdx  meta.json
include/lux/crypto/: crypto.h  metal_bls.h  metal_zk.h  zk.h
src/: crypto.cpp  metal_bls.mm
src/cgo/: zk_bridge.go
src/metal/: metal_zk.h  metal_zk.mm
